# Simple-Scene-Viewer-Editor

./: .gitignore  CMakeLists.txt  LOGL.sln  LOGL.vcxproj  LOGL.vcxproj.filters  README.md  imgui.ini
include/Application/: Application.h  ApplicationSettings.h
include/Buffers/: FrameBuffer.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h
include/Camera/: Camera.h
include/Debugging/: ConsoleDebug.h  Debugging.h  Logger.h
include/Lightning/: DirectionLight.h  PointLight.h  SpotLight.h
include/Model/: Mesh.h  Model.h
include/Renderer/: Renderer.h
include/Scenes/: Scene.h
include/Scenes/BaseScenes/: CartesianCS.h  Grid.h
include/Scenes/UserScenes/: BackpackModel.h  SpecularMaps.h
include/Shaders/: Shader.h
include/Textures/: Texture.h
libraries/include/glad/: glad.h
libraries/lib/: glfw3.lib
resources/shaders/: CartesianCSFrag.glsl  ModelFrag.glsl  ModelVert.glsl  fbFrag.glsl  imgFrag.glsl  imgVert.glsl  lightReflectiveObjFrag.glsl  lightReflectiveObjVert.glsl
shaders/: CartesianCSFrag.glsl  CartesianCSVert.glsl  imgFrag.glsl  imgVert.glsl  lightReflectiveObjFrag.glsl  lightVert.glsl
src/: main.cpp
src/Application/: Application.cpp  Application.h  ApplicationSettings.h  main.cpp
src/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
src/Camera/: Camera.cpp  Camera.h
src/Debugging/: Logger.cpp
src/Interfaces/: Renderable.h
src/Lightning/: PointLight.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Scenes/: Scene.cpp
src/Scenes/BaseScenes/: CartesianCS.h  Grid.h
src/Scenes/UserScenes/: SpecularMaps.h
src/Shaders/: Shader.cpp  Shader.h
src/Textures/: Texture.cpp  Texture.h
